--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustban"
-version = "0.1.0"
+version = "0.2.1"
 edition = "2021"
 
 [dependencies]
@@ -8,5 +8,6 @@ anyhow = "1"
 directories = "5"
 eframe = "0.27"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 toml = "0.8"
 uuid = { version = "1", features = ["v4", "serde"] }
